* Params.pprint -> Utils.pprint
* Params.g_options -> Options.options
* Params.g_commands -> Options.commands
* Params.g_build -> Build.bld
* Build.bld.m_scanned_folders -> Build.bld.cache_scanned_folders
* Build.bld.m_allenvs -> Build.bld.all_envs
* Node: find_build -> find_or_declare
* Node: find_source -> find_resource
* Node: find_resource_lst, find_or_declare_lst, ensure_dir_node_from_path_lst, find_dir_lst disappear
* Remove m_ from all variables 

NEW IN WAF 1.4.3
----------------
* elimination of the Action classes
* quote '%' characters in subst_obj
* boost module improvements
* two new dependency algorithms
* automatic dependency computation (task chaining)

NEW IN WAF 1.4.2
----------------
* updated documentation (waf.pdf)
* new examples (demos/simple_scenarios/)
* node system bugfixes
* compile multiple vala files at the same time
* optimization of the method clone()

NEW IN WAF 1.4.1
----------------

* the gnome help installation is finally correct
* java support improvements
* in qt4 projects, dependencies are added on files listed in the qrc
* object extensions uses a new scheme to avoid conflicts
* optional dependency tracking on headers out of the build directory (bug:132)
* set the c language extension to ".c" only
* bash completion
* installation system fixes

NEW IN WAF 1.4.0
----------------

* various optimizations - see http://freehackers.org/~tnagy/bench.txt
* new system for adding methods dynamically (extend c/c++ builders)
* export_incdirs will add the folders when linking against libraries given in uselib_local
* the type 'plugin' disappears, the c/c++ types are staticlib,program,shlib
* configuration modules simplification (gcc, g++, ..)
* the configuration details are written to config.log
* the configuration defines are written in order of declaration
* the configuration process can be modified dynamically
* autoconfiguration no longer loses the command-line options
* clone no longer clashes with uselib_local
